--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,45 @@ a.active {
   color: #fff !important;
   border: 0 !important;
 }
+
+.action {
+  position: relative;
+}
+.action .profile {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.action .profile img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.action .menu {
+  position: absolute;
+  top: 80px;
+  right: -10px;
+  padding: 10px 20px;
+  background-color: #fff;
+  width: 200px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  transition: 0.5s;
+  z-index: 999;
+
+  visibility: hidden;
+  opacity: 0;
+}
+
+.profile:hover + .menu,
+.menu:hover {
+  visibility: visible;
+  opacity: 1;
+}
